# golfed-error

./: CHANGELOG.md  LICENSE  golfed-errors.cabal
app/: Main.hs
programs/: GHC-10190.hs  GHC-38417.hs  GHC-42044.hs  GHC-45696.hs  GHC-46956.hs  GHC-47403.hs  GHC-47854.hs  GHC-53633.hs  GHC-64725.hs  GHC-90177.hs
