cabal-version:      3.0
name:               golfed-errors
version:            0.1.0.0
synopsis:
    A collection of golfed programs to make GHC error with a specific error

-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Jade
maintainer:         Jade512@proton.me
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable golfed-errors
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.2.1
    hs-source-dirs:   app
    default-language: GHC2021
